# qmlmixxxlibrary

./: CMakeLists.txt
qml/Application/: CMakeLists.txt  ResizableHeaderView.qml  main.qml
src/: main.cpp
src/database/: CMakeLists.txt  headerview.cpp  headerview.h  librarytablemodel.cpp  librarytablemodel.h  mixxxdb.cpp  mixxxdb.h
src/extensions/: CMakeLists.txt  multirowselectionmodel.cpp  multirowselectionmodel.h
